force-app/main/default/objects/Opportunity/fields/Client_SOW_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Client_SOW_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client SOW Signatory</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Client SOW Signatory)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>