force-app/main/default/objects/Opportunity/fields/Client_SOW_Signatory_Title__c.field-meta.xml
<CustomField>
    <fullName>Client_SOW_Signatory_Title__c</fullName>
    <formula>Client_SOW_Signatory__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client SOW Signatory Title</label>
    <type>Text</type>
</CustomField>