force-app/main/default/objects/Opportunity/fields/CloudQnect_SOW_Signatory__c.field-meta.xml
<CustomField>
    <fullName>CloudQnect_SOW_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CloudQnect SOW Signatory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>