force-app/main/default/objects/Opportunity/fields/CloudQnect_SOW_Signatory_Title__c.field-meta.xml
<CustomField>
    <fullName>CloudQnect_SOW_Signatory_Title__c</fullName>
    <formula>CloudQnect_SOW_Signatory__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CloudQnect SOW Signatory Title</label>
    <type>Text</type>
</CustomField>