force-app/main/default/objects/Opportunity/fields/Company_Left__c.field-meta.xml
<CustomField>
    <fullName>Company_Left__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Left</label>
    <type>Checkbox</type>
</CustomField>