force-app/main/default/objects/Opportunity/fields/Contact_Form_Used__c.field-meta.xml
<CustomField>
    <fullName>Contact_Form_Used__c</fullName>
    <description>Indicates which form on the website was used by prospect.</description>
    <label>Contact Form Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Us</fullName>
            </value>
            <value>
                <fullName>Get Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>