force-app/main/default/objects/Opportunity/fields/Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length__c</fullName>
    <inlineHelpText>Contract length in months.</inlineHelpText>
    <label>Contract Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>