force-app/main/default/objects/Opportunity/fields/Has_Master_Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Has_Master_Service_Agreement__c</fullName>
    <formula>Account.Has_Master_Services_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Master Service Agreement</label>
    <type>Checkbox</type>
</CustomField>