force-app/main/default/objects/Opportunity/fields/Has_Partner_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Has_Partner_Agreement__c</fullName>
    <formula>Account.Has_Partner_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Partner Agreement</label>
    <type>Checkbox</type>
</CustomField>