force-app/main/default/objects/Opportunity/fields/is_Upsell__c.field-meta.xml
<CustomField>
    <fullName>is_Upsell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Upsell</label>
    <type>Checkbox</type>
</CustomField>