force-app/main/default/objects/Opportunity/fields/Job_Title_or_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_or_Project_Title__c</fullName>
    <label>Job Title or Project Title</label>
    <length>75</length>
    <type>Text</type>
</CustomField>