force-app/main/default/objects/Opportunity/fields/leadfeederapp__LatestWebsiteVisit__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__LatestWebsiteVisit__c</fullName>
    <label>Latest Leadfeeder Visit</label>
    <type>Date</type>
</CustomField>