force-app/main/default/objects/Opportunity/fields/leadfeederapp__LeadfeederLink__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__LeadfeederLink__c</fullName>
    <label>View in Leadfeeder</label>
    <type>Url</type>
</CustomField>