force-app/main/default/objects/Opportunity/fields/MSA_Signatory__c.field-meta.xml
<CustomField>
    <fullName>MSA_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client MSA Signatory</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>