force-app/main/default/objects/Opportunity/fields/Now_Plus_30__c.field-meta.xml
<CustomField>
    <fullName>Now_Plus_30__c</fullName>
    <formula>TEXT(TODAY()+30) &amp; &quot;T&quot; &amp; TEXT(TIMEVALUE(NOW()+0.04167)) &amp; &quot;Z&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Now Plus 30</label>
    <type>Text</type>
</CustomField>