force-app/main/default/objects/Opportunity/fields/Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Type__c</fullName>
    <label>Partnership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Talent Request</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Partnership Opportunity</fullName>
                <isActive>false</isActive>
                <label>Partnership Opportunity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>