force-app/main/default/objects/Opportunity/fields/Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Phone_3__c</fullName>
    <label>Company Phone</label>
    <type>Phone</type>
</CustomField>