force-app/main/default/objects/Opportunity/fields/Primary_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Primary_Requirements__c</fullName>
    <label>Primary Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>