force-app/main/default/objects/Opportunity/fields/RecruitingEmailSent__c.field-meta.xml
<CustomField>
    <fullName>RecruitingEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Email is Sent to Recruiting Team</description>
    <label>RecruitingEmailSent</label>
    <type>Checkbox</type>
</CustomField>