force-app/main/default/objects/Opportunity/fields/Referred_By_Account__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>ReferredOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>