force-app/main/default/objects/Opportunity/fields/Referred_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Referred By Contact)</relationshipLabel>
    <relationshipName>ReferredOpportunitiesContact</relationshipName>
    <type>Lookup</type>
</CustomField>