force-app/main/default/objects/Opportunity/fields/Resource_Location__c.field-meta.xml
<CustomField>
    <fullName>Resource_Location__c</fullName>
    <label>Resource Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Combined Remote/On-site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>