force-app/main/default/objects/Opportunity/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <label>Resource Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>