force-app/main/default/objects/Opportunity/fields/Resources_Required__c.field-meta.xml
<CustomField>
    <fullName>Resources_Required__c</fullName>
    <description>The type or role(s) the client needs</description>
    <label>Resources Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>