force-app/main/default/objects/Opportunity/fields/REVGRD__CreatedBySCC__c.field-meta.xml
<CustomField>
    <fullName>REVGRD__CreatedBySCC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By SCC</label>
    <type>Checkbox</type>
</CustomField>