force-app/main/default/objects/Opportunity/fields/REVGRD__Last_Inbound_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>REVGRD__Last_Inbound_Email_Date__c</fullName>
    <description>Inbound Email - это таск с Type = Email и Send = false</description>
    <label>Last Inbound Email Date</label>
    <type>Date</type>
</CustomField>