force-app/main/default/objects/Opportunity/fields/REVGRD__Last_Outbound_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>REVGRD__Last_Outbound_Email_Date__c</fullName>
    <description>Outbound Email - это таск с Type = Email и Sent = true</description>
    <label>Last Outbound Email Date</label>
    <type>Date</type>
</CustomField>