force-app/main/default/objects/Opportunity/fields/REVGRD__Needs_Reply__c.field-meta.xml
<CustomField>
    <fullName>REVGRD__Needs_Reply__c</fullName>
    <formula>AND(NOT(ISNULL(REVGRD__Last_Inbound_Email_Date__c)), OR( ISNULL(REVGRD__Last_Outbound_Email_Date__c), REVGRD__Last_Inbound_Email_Date__c&gt;  REVGRD__Last_Outbound_Email_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Reply</label>
    <type>Checkbox</type>
</CustomField>