force-app/main/default/objects/Opportunity/fields/REVGRD__Status__c.field-meta.xml
<CustomField>
    <fullName>REVGRD__Status__c</fullName>
    <label>RG Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>