force-app/main/default/objects/Opportunity/fields/SOW_Number__c.field-meta.xml
<CustomField>
    <fullName>SOW_Number__c</fullName>
    <label>SOW Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>