force-app/main/default/objects/Opportunity/recordTypes/Managed_Services.recordType-meta.xml
<RecordType>
    <fullName>Managed_Services</fullName>
    <active>true</active>
    <businessProcess>CQ Sales</businessProcess>
    <label>Managed Services</label>
</RecordType>