force-app/main/default/objects/Opportunity/recordTypes/Quickstart.recordType-meta.xml
<RecordType>
    <fullName>Quickstart</fullName>
    <active>true</active>
    <businessProcess>CQ Sales</businessProcess>
    <label>Quickstart</label>
</RecordType>