force-app/main/default/objects/Opportunity/recordTypes/T_M.recordType-meta.xml
<RecordType>
    <fullName>T_M</fullName>
    <active>true</active>
    <businessProcess>CQ Sales</businessProcess>
    <label>T&amp;M</label>
</RecordType>