force-app/main/default/objects/Opportunity/listViews/Current_Opportunities.listView-meta.xml
<ListView>
    <fullName>Current_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>Referred_By_Account__c</columns>
    <columns>Referred_By_Contact__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Lost</value>
    </filters>
    <label>Current Opportunities</label>
</ListView>